# Gomoku

./: CMakeLists.txt  README.md
interface/: Game.py  colors.py  main.py
interface/classes/: Board.py  Button.py  GameObject.py  Gui.py  Player.py
interface/classes/board/: Background.py  Board.py  Grid.py  Stone.py
interface/classes/gui/: Button.py  Gui.py  TextBox.py
src/: Common.hpp  main.cpp  main.py
src/classes/: Minmax.py
src/common/: APlayer.py  Player.py
src/controller/: AAction.hpp  ActionDecrementCapture.hpp  ActionIncrementCapture.hpp  ActionSetEndState.hpp  ActionUpdateBoard.hpp  Board.py  Gomoku.cpp  Gomoku.hpp  Gomoku.py  Minmax.cpp  Minmax.hpp  Minmax.py  Pair.cpp  Pair.hpp  Player.cpp  Player.hpp  Player.py  Tests.cpp  Tests.hpp  Timer.cpp  Timer.hpp  helpers.py  setup.py
src/controller/actions/: AAction.cpp  AAction.hpp  ActionDecrementCapture.cpp  ActionDecrementCapture.hpp  ActionIncrementCapture.cpp  ActionIncrementCapture.hpp  ActionSetEndState.cpp  ActionSetEndState.hpp  ActionUpdateBoard.cpp  ActionUpdateBoard.hpp
src/controller/rules/: ARule.hpp  ARule.py  Capture.py  CaptureGameEnding.py  Captures.cpp  Captures.hpp  GameEndingCapture.cpp  GameEndingCapture.hpp  NoDoubleFreeThree.cpp  NoDoubleFreeThree.hpp  NoDoubleThree.py  RuleFactory.py
src/interface/: Game.py  Interface.py  PlayerViewModel.py  SFMLWindow.cpp  SFMLWindow.hpp  colors.py
src/interface/board/: Background.cpp  Background.hpp  Background.py  Board.py  Grid.cpp  Grid.hpp  Grid.py  IRenderable.hpp  Stone.py
src/interface/classes/: Player.py
src/interface/classes/board/: Background.py  Board.py  Grid.py  Stone.py
src/interface/classes/gui/: Button.py  Gui.py  TextBox.py
src/interface/gui/: Button.cpp  Button.hpp  Button.py  Colors.cpp  Colors.hpp  GUI.cpp  GUI.hpp  Gui.py  TextBox.cpp  TextBox.hpp  TextBox.py
